--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,10 @@
 # Site settings
 title: Filippo Corti
 email: me@filippocorti.net
-description: > # this means to ignore newlines until "baseurl:"
+description: >
   Blogger, designer and developer from Lecco.
   He drinks a lot of coffee.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://filippocorti.com" # the base hostname & protocol for your site
+url: https://filippocorti.net
 twitter_username: philapple
 github_username:  philapple
 
