Add show more on home + move photos to separate page

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: me@filippocorti.net
 description: >
   Blogger, designer and developer from Lecco.
   He drinks a lot of coffee.
-url: https://filippocorti.net
+url: https://www.filippocorti.net
 twitter_username: philapple
 github_username:  philapple
 
