--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,9 @@
 title: Filippo Corti
 email: me@filippocorti.net
 description: >
-  Blogger, designer and developer from Lecco.
-  He drinks a lot of coffee.
+  UX designer and web developer.
+  Coffee Enthusiast.
+  Blogger and .
 url: https://www.filippocorti.net
 twitter_username: philapple
 github_username:  philapple
