--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 title: Filippo Corti
 email: me@filippocorti.net
 description: >
-  UX designer and web developer.
+  UX/UI designer and web developer.
   Coffee Enthusiast.
-  Blogger and .
+  Blogger.
 url: https://www.filippocorti.net
 twitter_username: philapple
 github_username:  philapple
@@ -23,6 +23,30 @@ exclude: []
 
 plugins:
   - octopress-autoprefixer
+  - jekyll-paginate-v2
+
+# Pagination configuration for notes/blog
+pagination:
+  enabled: true
+  collection: 'posts'
+  per_page: 10
+  sort_field: 'date'
+  sort_reverse: true
+  permalink: '/page/:num/'
+  title: ':title - page :num'
+
+autopages:
+
+  # Site-wide kill switch, disable here and it doesn't run at all
+  enabled: true
+
+  # Tag pages, omit to disable
+  tags:
+    layouts:
+      - 'archives.html'
+    title: 'Posts tagged with :tag' # :tag is replaced by the tag name
+    permalink: 'notes/:tag'
+
 
 # Header nav
 navigation:
